application-paragraph-numbering-macro/src/main/resources/paragraphsnumbering.css
.paragraphs-numbering-root h1,
.paragraphs-numbering-root h2,
.paragraphs-numbering-root h3,
.paragraphs-numbering-root h4,
.paragraphs-numbering-root h5,
.paragraphs-numbering-root h6 {
  font-size: 14px; /* TODO: replace with a variable @font-size-base*/
}

.paragraphs-numbering-root {
  margin-left: 100px;
  padding-bottom: 10px;
}

.paragraphs-numbering-root p,
.paragraphs-numbering-root h1,
.paragraphs-numbering-root h2,
.paragraphs-numbering-root h3,
.paragraphs-numbering-root h4,
.paragraphs-numbering-root h5,
.paragraphs-numbering-root h6,
.paragraphs-numbering-root .wikimodel-emptyline {
  margin: 0 0 10px 0;
}

.paragraphs-numbering-root p > span,
.paragraphs-numbering-root h1 > span,
.paragraphs-numbering-root h2 > span,
.paragraphs-numbering-root h3 > span,
.paragraphs-numbering-root h4 > span,
.paragraphs-numbering-root h5 > span,
.paragraphs-numbering-root h6 > span {
  display: inline-block;
}

.paragraphs-numbering-root h1::before,
.paragraphs-numbering-root h2::before,
.paragraphs-numbering-root h3::before,
.paragraphs-numbering-root h4::before,
.paragraphs-numbering-root h5::before,
.paragraphs-numbering-root h6::before {
  position: absolute;
  margin-left: -100px;
}

